# ansible-env-bootstrap

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE  README.md  ansible.cfg  flake.nix  pyproject.toml  run.sh  shell.nix
.ci/: syntax_check_all.sh
.github/workflows/: ci.yml
collections/: requirements.yml
inventories/desktop-arch/: hosts.yml
inventories/macbook-personal/: hosts.yml
inventories/macbook-work/: hosts.yml
playbooks/: common-macbook.yml  common.yml  desktop-arch.yml  macbook-common.yml  macbook-personal.yml  macbook-work.yml
roles/apache-spark/defaults/: main.yml
roles/apache-spark/meta/: main.yml
roles/apache-spark/tasks/: main.yml
roles/apache_spark/defaults/: main.yml
roles/apache_spark/meta/: main.yml
roles/apache_spark/tasks/: main.yml
roles/aur-helper/defaults/: main.yml
roles/aur-helper/meta/: main.yml
roles/aur-helper/tasks/: main.yml
roles/aur_helper/defaults/: main.yml
roles/aur_helper/meta/: main.yml
roles/aur_helper/tasks/: main.yml
roles/calibre/defaults/: main.yml
roles/calibre/meta/: main.yml
roles/calibre/tasks/: main.yml
roles/caprine/defaults/: main.yml
roles/caprine/meta/: main.yml
roles/caprine/tasks/: main.yml
roles/discord/defaults/: main.yml
roles/discord/meta/: main.yml
roles/discord/tasks/: main.yml
roles/docker/defaults/: main.yml
roles/docker/meta/: main.yml
roles/docker/tasks/: main.yml
roles/dotfiles/defaults/: main.yml
roles/dotfiles/meta/: main.yml
roles/dotfiles/tasks/: main.yml
roles/facts/meta/: main.yml
tests/: syntax_check_all.sh
(+108 files in other folders)
