[project]
name = "ansible-env-bootstrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "ansible>=12.2.0",
]

[project.optional-dependencies]
# Developer tooling used in CI
dev = [
    "ansible-lint>=24.0.0",
    "yamllint>=1.35.0",
]
